# viz3D

./: .gitignore  .gitmodules  LICENSE  README.md  install.sh
Samples/Datasets/: 0.tsv  5k_cluster_label.tsv  sample_750_clusters.tsv
Samples/Materials/: Aquamarine.xml  Azure.xml  Beige.xml  Blue.xml  Chartreuse.xml  Coral.xml  Crimson.xml  Cyan.xml  ForestGreen.xml  Fuchsia.xml  Golden.xml  Goldenrod.xml  Green.xml  HotPink.xml  Indigo.xml  Ivory.xml  Khaki.xml  Lavender.xml  Lime.xml  Maroon.xml  Mauve.xml  MediumBlue.xml  NavyBlue.xml  Olive.xml  Plum.xml  Puce.xml  Red.xml  RoyalBlue.xml  Salmon.xml  Silver.xml  Tan.xml  Teal.xml  Wheat.xml
Source/: BoxInfoComponent.cpp  BoxInfoComponent.h  CMakeLists.txt  Malwurl.cpp  Malwurl.h  viz3D.cpp  viz3D.h
